# tealeaves-art

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  make.rb  shell.nix  tealeaves-art-gen.cabal  tealeaves-art-gen.nix  tealeaves-art.cabal  tealeaves-art.nix
app/: Main.hs
lib/Tealeaves/: Art.hs
lib/Tealeaves/Art/: Common.hs  Cube.hs  Tree.hs
typeclasses/: typeclasses.dot
